<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory>
		<Preference
			android:title="@string/group_list_title"
			android:key="group_editor"
			android:background="@drawable/title_background" />
	
	    <CheckBoxPreference
			android:title="@string/notify_unused_groups"
			android:key="notify_unused_groups"
			android:defaultValue="true" />
		
		<CheckBoxPreference
			android:title="@string/show_tips_on_startup"
			android:key="show_startup_tips"
			android:defaultValue="true" />
	
		<CheckBoxPreference
			android:key="send_anon_data"
			android:title="@string/send_anon_data_title"
			android:summary="@string/send_anon_data_desc"
			android:defaultValue="true" />
		
		<Preference
			android:title="@string/reminders_title"
			android:key="reminders" />
	
		<Preference
			android:title="@string/security_title"
			android:key="security" />
		
		<Preference
			android:title="@string/clear_data_title"
			android:key="clear_data" />
	
	</PreferenceCategory>
<!--
	<PreferenceCategory
		android:title="@string/settings_import_export">
		<Preference
			android:title="@string/import_title"
			android:key="import" />
		
		<Preference
			android:title="@string/export_title"
			android:key="export" />
	</PreferenceCategory>
-->
	
</PreferenceScreen>
