<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="5dip" android:background="@drawable/bg">
	
	<CheckBox
		android:id="@+id/securityEnabled"
		android:layout_width="fill_parent"
						android:textColor="#ffffff"
		
		android:layout_height="wrap_content"
		android:text="@string/security_enabled" />

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1.0">
		<LinearLayout
			android:id="@+id/inputsContainer"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical">
			
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textColor="#ffffff"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:text="@string/security_pin" />
			<EditText
				android:id="@+id/pin"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:inputType="number"
				android:imeOptions="actionNext" />
				
			<View
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				style="@style/divider" />
				
			<TextView
				android:layout_width="fill_parent"
				android:textColor="#ffffff"
				android:layout_height="wrap_content"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:text="@string/question1" />
			<EditText
				android:id="@+id/question1"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:imeOptions="actionNext" />
			<TextView
				android:layout_width="fill_parent"
				android:textColor="#ffffff"
				android:layout_height="wrap_content"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:text="@string/answer1" />
			<EditText
				android:id="@+id/answer1"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:imeOptions="actionNext" />
				
			<View
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				style="@style/divider" />
				
			<TextView
				android:layout_width="fill_parent"
				android:textColor="#ffffff"
				android:layout_height="wrap_content"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:text="@string/question2" />
			<EditText
				android:id="@+id/question2"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:imeOptions="actionNext" />
			<TextView
				android:layout_width="fill_parent"
				android:textColor="#ffffff"
				android:layout_height="wrap_content"
				android:textAppearance="@android:style/TextAppearance.Medium"
				android:text="@string/answer2" />
			<EditText
				android:id="@+id/answer2"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:imeOptions="actionDone" />
		</LinearLayout>
	</ScrollView>
</LinearLayout>
