<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:padding="5dip"
	android:background="#FF000000">
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1.0"
		android:gravity="center"
		android:orientation="vertical">
		<ImageView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:scaleType="fitCenter"
			android:src="@drawable/splashlogo" />
	</LinearLayout>
	

	<TextView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textAppearance="@android:style/TextAppearance.Medium"
		android:text="@string/enter_your_pin"
		android:textColor="#FFFFFFFF" />
	<EditText
		android:id="@+id/pin"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:imeOptions="actionGo"
		android:inputType="number" />
		
	
		
	<View
		android:layout_width="fill_parent"
		android:layout_height="2dip"
		style="@style/divider" />
		
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1.0"
		android:gravity="center_vertical"
		android:orientation="vertical">

		<TextView
			android:id="@+id/startupTips"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_marginTop="10dip"
			android:layout_marginBottom="10dip"
			android:textColor="#FFFFFFFF" />
	
		<CheckBox
			android:id="@+id/showTipsCheckbox"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/show_tips_on_startup"
			android:textColor="#FFFFFFFF" />
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical">
		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/t2_logo" />
			
		<View
			android:layout_width="wrap_content"
			android:layout_height="10dip"
			android:layout_weight="1.0" />
			
		<Button
			android:id="@+id/forgotPinButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/forgot_pin" />
	</LinearLayout>
</LinearLayout>